# minimal-mjx

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: _config.yml  api_reference.md  developer_guide.md  index.md  user_guide.md
envs/: simulate.py
envs/dmcontrol/: cheetah.py  interface.py
envs/dmcontrol/config/: cheetah.yaml
envs/generic/: base.py
eval/: rollout_policy.py
example/: cheetah.py  cheetah.xml  cheetah.yaml  create_environment.py  rollout.py  simulate.py  train.py
learning/: inference.py  networks.py  ppo.py
learning/training/: begin_run.py  startup.py  train.sh  training.py
src/eval/: rollout.py  simulate.py
src/learning/: begin_run.py  inference.py  startup.py  training.py
src/minimal_mjx/: __init__.py
src/minimal_mjx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/minimal_mjx/envs/: __init__.py
src/minimal_mjx/envs/generic/: __init__.py  base.py
src/minimal_mjx/eval/: __init__.py  rollout.py  simulate.py
src/minimal_mjx/learning/: __init__.py  begin_run.py  inference.py  startup.py  train.sh  training.py
src/minimal_mjx/utils/: __init__.py  config.py  logging.py  plotting.py  state.py  yamlutils.py
src/utils/: plotting.py
utils/: geometry.py  plotting.py
